--- a/Christine/src/styles.css
+++ b/Christine/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-light {
+  color: white;
+  background-size: cover;
+}
