--- a/Christine/src/styles.css
+++ b/Christine/src/styles.css
@@ -2,4 +2,29 @@
 .bg-light {
   color: white;
   background-size: cover;
+  margin-top: -70px;
+  height: 400px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.navbar-toggler-icon {
+  background-color: white;
+}
+
+@media screen and (max-width: 991px) {
+  .navbar {
+    background-color: rgb(49, 48, 48);
+  }
+}
+
+body, .bg-beige {
+  background-color: beige;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+}
+
+.card {
+  box-shadow: 0px 0px 15px rgb(159, 157, 157);
 }
