--- a/Christine/src/app/home/home.component.html
+++ b/Christine/src/app/home/home.component.html
@@ -6,32 +6,32 @@
       <img src="../../assets/monk.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Monasteries</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-danger">Go somewhere</a>
+        <p class="card-text">{{cardText}}</p>
+        <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
     <div class="card m-2 p-0 bg-beige" style="width: 18rem;">
       <img src="../../assets/stupa.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sacred Places</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-danger">Go somewhere</a>
+        <p class="card-text">{{cardText}}</p>
+        <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
     <div class="card m-2 p-0 bg-beige" style="width: 18rem;">
       <img src="../../assets/flags.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Trekking</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-danger">Go somewhere</a>
+        <p class="card-text">{{cardText}}</p>
+        <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
     <div class="card m-2 p-0 bg-beige" style="width: 18rem;">
       <img src="../../assets/guy.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sightseeing</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-danger">Go somewhere</a>
+        <p class="card-text">{{cardText}}</p>
+        <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
   </div>
