--- a/Christine/src/app/hero-about/hero-about.component.css
+++ b/Christine/src/app/hero-about/hero-about.component.css
@@ -1,3 +1,3 @@
 .hero-about {
-  background: url('../../assets/hero-about.jpg')  no-repeat bottom center;
+  background: url('../../assets/hero-about.jpg') no-repeat top center;
 }
