--- a/Christine/src/app/hero-home/hero-home.component.html
+++ b/Christine/src/app/hero-home/hero-home.component.html
@@ -1,5 +1,5 @@
 <div class="bg-light py-5 hero-home">
-  <div  class="container">
+  <div  class="container d-flex flex-column justify-content-center align-items-center">
     <h1 class="display-4 fw-bold mb-4">{{heroHeading}}</h1>
     <p class="fs-5 bg-opa">{{heroText}}</p>
     <p><a class= "btn btn-danger btn-lg" routerLink="{{heroBtnUrl}}" role="button">{{heroBtnText}}</a></p>
