--- a/Christine/src/styles.css
+++ b/Christine/src/styles.css
@@ -2,8 +2,8 @@
 .bg-light {
   color: white;
   background-size: cover;
-  margin-top: -70px;
-  height: 400px;
+  margin-top: -150px;
+  height: 500px;
   display: flex;
   align-items: flex-end;
 }
@@ -27,4 +27,17 @@ body, .bg-beige {
 
 .card {
   box-shadow: 0px 0px 15px rgb(159, 157, 157);
+  transition: all 0.2s linear;
+}
+
+.btn, .navbar-brand .nav-link {
+  transition: all 0.2s linear;
+}
+
+.btn:hover, .card:hover, .navbar-brand:hover {
+  transform: scale(1.01);
+}
+
+.nav-link:hover {
+  text-transform: uppercase;
 }
