--- a/Christine/src/app/home/home.component.html
+++ b/Christine/src/app/home/home.component.html
@@ -7,6 +7,7 @@
       <div class="card-body">
         <h5 class="card-title">Monasteries</h5>
         <p class="card-text">{{cardText}}</p>
+        <p class="price text-end">Price: € {{cardPrice}},--</p>
         <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
@@ -15,6 +16,7 @@
       <div class="card-body">
         <h5 class="card-title">Sacred Places</h5>
         <p class="card-text">{{cardText}}</p>
+        <p class="price text-end">Price: € {{cardPrice}},--</p>
         <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
@@ -23,6 +25,7 @@
       <div class="card-body">
         <h5 class="card-title">Trekking</h5>
         <p class="card-text">{{cardText}}</p>
+        <p class="price text-end">Price: € {{cardPrice}},--</p>
         <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
@@ -31,6 +34,7 @@
       <div class="card-body">
         <h5 class="card-title">Sightseeing</h5>
         <p class="card-text">{{cardText}}</p>
+        <p class="price text-end">Price: € {{cardPrice}},--</p>
         <a routerLink="{{btnLink}}" class="btn btn-danger">{{btnText}}</a>
       </div>
     </div>
