--- a/Christine/src/app/hero-about/hero-about.component.html
+++ b/Christine/src/app/hero-about/hero-about.component.html
@@ -1,6 +1,6 @@
 <div class="bg-light py-5 hero-about">
   <div  class="container d-flex flex-column justify-content-center align-items-center">
-    <h1 class="display-4 fw-bold mb-4">{{heroHeading}}</h1>
+    <h1 class="fw-bold mb-4">{{heroHeading}}</h1>
     <p class="fs-5 bg-opa">{{heroText}}</p>
     <p><a class= "btn btn-danger btn-lg" href="{{heroBtnUrl}}" role="button" target="_blank">{{heroBtnText}}</a></p>
   </div>
