--- a/Nazila/Classwork/src/app/hero/hero.component.html
+++ b/Nazila/Classwork/src/app/hero/hero.component.html
@@ -1,17 +1,32 @@
 <div id="carouselExampleDark" class="carousel carousel-dark slide">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    </div>
+
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            </div>
             <img src="../../assets/Images/mallorca-1660036_1920.jpg" class="d-block hero-image" alt="...">
             <div class="carousel-caption d-none d-md-block heroTxt">
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
                 <h5 class="h5">Some representative placeholder content for the first slide.</h5>
+                <!-- <button type="button" class="btn btn-light"></button> -->
+                <a class="btn btn-light" routerLink="about" role="button">Learn more</a>
+                <div class="heroBottom"> Why we are the Best
+
+
+                </div>
+                <div class="imgContainer">
+                    <div class="facilities"><img src="../../assets/Images/accommodation.png"><br><span>Accomodation</span></div>
+                    <div class="facilities"><img src="../../assets/Images/airplane.png"><br><span>Transportation</span></div>
+                    <div class="facilities"><img src="../../assets/Images/call-center-service.png"><br><span>Seasoned Agent</span></div>
+                    <div class="facilities"><img src="../../assets/Images/star.png"><br><span>Easy trip Planning</span></div>
+
+
+                </div>
             </div>
+
+
+
         </div>
 
-
     </div>
-
-</div>
