--- a/Nazila/Classwork/src/app/hero/hero.component.scss
+++ b/Nazila/Classwork/src/app/hero/hero.component.scss
@@ -4,7 +4,7 @@ body {
 
 .hero-image {
     width: 90vw;
-    height: 30vh;
+    height: 81vh;
     margin: 0 auto;
 }
 
@@ -13,4 +13,37 @@ body {
     font-size: 2rem;
     font-weight: 500;
     color: azure;
+}
+
+.heroBottom {
+    width: 100%;
+    height: 30vh;
+    // margin-left: -4.5rem;
+    background-color: rgba(#00425A, .3);
+    position: relative;
+    top: 14vh;
+    // left: -7rem;
+    z-index: 1;
+}
+
+.facilities {
+    display: inline-block;
+    border-radius: 50%;
+    width: 6rem;
+    height: 6rem;
+    background-color: rgba(#ccc, .3);
+    font-size: .8rem;
+    color: black;
+    img {
+        width: 1rem;
+        height: 1rem;
+    }
+}
+
+.imgContainer {
+    display: flex;
+    justify-content: space-around;
+    span {
+        text-align: center;
+    }
 }
