--- a/Nazila/Classwork/src/app/about/about.component.html
+++ b/Nazila/Classwork/src/app/about/about.component.html
@@ -1,1 +1,24 @@
+<div id="carouselExampleDark" class="carousel carousel-dark slide">
 
+    <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            </div>
+            <img src="../../assets/Images/fantasy-3502188_1920.jpg" class="d-block hero-image" alt="...">
+            <div class="carousel-caption d-none d-md-block heroTxt">
+                <h1 class="text-light-emphasis">Our History</h1>
+
+
+                <!-- <div class="heroBottom"> Why we are the Best
+                </div>
+                <div class="imgContainer">
+                    <div class="facilities"><img src="../../assets/Images/accommodation.png"><br><span>Accomodation</span></div>
+                    <div class="facilities"><img src="../../assets/Images/airplane.png"><br><span>Transportation</span></div>
+                    <div class="facilities"><img src="../../assets/Images/call-center-service.png"><br><span>Seasoned Agent</span></div>
+                    <div class="facilities"><img src="../../assets/Images/star.png"><br><span>Easy trip Planning</span></div>
+                </div> -->
+            </div>
+        </div>
+
+    </div>
