--- a/Nazila/Classwork/src/app/home/home.component.html
+++ b/Nazila/Classwork/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="card gx-2 gy-2" style="width: 18rem;">
                 <figure>
                     <img src="../../assets/Images/trulli-5251121_1920.jpg" class="card-img-top" alt="...">
-                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                    <figcaption>Trulli, Puglia, Italy.</figcaption>
                 </figure>
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -18,7 +18,7 @@
             <div class="card" style="width: 18rem;">
                 <figure>
                     <img src="../../assets/Images/houses-4093227_1920.jpg" class="card-img-top" alt="...">
-                    <figcaption>Fig.2 - Trulli, Puglia, Italy.</figcaption>
+                    <figcaption>Trulli, Puglia, Italy.</figcaption>
                 </figure>
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -30,8 +30,8 @@
         <div class="col gx-2 gy-2">
             <div class="card" style="width: 18rem;">
                 <figure>
-                    <img src="../../assets/Images/houses-4093227_1920.jpg" class="card-img-top" alt="...">
-                    <figcaption>Fig.2 - Trulli, Puglia, Italy.</figcaption>
+                    <img src="../../assets/Images/mallorca-3543348_1920.jpg" class="card-img-top" alt="...">
+                    <figcaption>Mallorca, Spain.</figcaption>
                 </figure>
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
