chnge in all pages

--- a/Nazila/Classwork/src/app/hero/hero.component.html
+++ b/Nazila/Classwork/src/app/hero/hero.component.html
@@ -5,10 +5,11 @@
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
-            <img src="../../assets/Images/mallorca-1660036_1920.jpg" class="d-block hero-image" alt="...">
+            <img src="../../assets/Images/mallorca-1660036_1920.jpg" class="d-block hero-image" alt="mallorca">
             <div class="carousel-caption d-none d-md-block heroTxt">
-                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                <h5 class="h5">Some representative placeholder content for the first slide.</h5>
+                <h1>Journey</h1>
+                <h2>Travel Guide</h2>
+                <h5 class="h5">Best Trip Ever</h5>
                 <!-- <button type="button" class="btn btn-light"></button> -->
                 <a class="btn btn-light" routerLink="about" role="button">Learn more</a>
                 <div class="heroBottom"> Why we are the Best
