--- a/Nazila/Classwork/src/app/about/about.component.scss
+++ b/Nazila/Classwork/src/app/about/about.component.scss
@@ -1,49 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 body {
     font-size: 16px;
 }
 
-.hero-image {
-    width: 90vw;
-    height: 60vh;
-    margin: 0 auto;
-}
-
-.heroTxt {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 500;
-    color: azure;
-}
-
-.heroBottom {
-    width: 100%;
-    height: 30vh;
-    // margin-left: -4.5rem;
-    background-color: rgba(#00425A, .3);
-    position: relative;
-    top: 14vh;
-    // left: -7rem;
-    z-index: 1;
-}
-
-.facilities {
-    display: inline-block;
-    border-radius: 50%;
-    width: 6rem;
-    height: 6rem;
-    background-color: rgba(#ccc, .3);
-    font-size: .8rem;
-    color: black;
+.container {
+    width: 90%;
     img {
-        width: 1rem;
-        height: 1rem;
+        width: 100%;
+        height: 30vh;
     }
 }
 
-.imgContainer {
-    display: flex;
-    justify-content: space-around;
-    span {
-        text-align: center;
-    }
+.aboutUs {
+    position: relative;
+    top: -10rem;
+    background: rgba(#ccc, .3);
+    width: 30rem;
+    height: 5rem;
+    margin: 0 auto;
+    line-height: 3;
+    font-weight: 400;
+    font-size: 3rem;
+    font-family: 'Anton', sans-serif;
+    border-radius: 25px;
 }
